--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,42 @@
 version: 2
+
 updates:
+  # Enable version updates for npm
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
-    open-pull-requests-limit: 5
+      day: "friday"
+      time: "09:00"
+    open-pull-requests-limit: 10
     commit-message:
       prefix: "chore"
       include: "scope"
     reviewers:
-      - RumenDamyanov
+      - "RumenDamyanov"
     labels:
-      - dependencies
-      - automated
+      - "dependencies"
+      - "automated"
+    ignore:
+      # Ignore major version updates for stable dependencies
+      - dependency-name: "typescript"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "eslint"
+        update-types: ["version-update:semver-major"]
+
+  # Enable version updates for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "friday"
+      time: "09:00"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "RumenDamyanov"
+    commit-message:
+      prefix: "ci"
+      include: "scope"
+    labels:
+      - "ci"
+      - "automated"
