fix: remap Go backend to port 8083, treat JS as local engine, fix AI move animation
- Docker: fix rust healthcheck CMD, remove js-backend service, remap go-backend 8083:8080
- JS backend now uses LocalProvider (in-browser @rumenx/chess, no server)
- AI moves use makeMove() directly instead of selectSquare() — eliminates legal move dots flash
- Add Makefile with docker and dev shortcuts
- Update .env.example and types for new port mappings

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ VITE_CHESS_BACKEND=local
 
 # Backend URLs (only used for remote backends)
 # VITE_CHESS_RUST_URL=http://localhost:8082
-# VITE_CHESS_GO_URL=http://localhost:8080
-# VITE_CHESS_JS_URL=http://localhost:8081
+# VITE_CHESS_GO_URL=http://localhost:8083
+# JS engine uses in-browser @rumenx/chess (no server needed)
