--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,13 @@ services:
     environment:
       - VITE_CHESS_BACKEND=local
       - VITE_CHESS_RUST_URL=http://localhost:8082
-      - VITE_CHESS_GO_URL=http://localhost:8080
+      - VITE_CHESS_GO_URL=http://localhost:8083
       - VITE_CHESS_JS_URL=http://localhost:8081
     depends_on:
       rust-backend:
         condition: service_healthy
         required: false
       go-backend:
-        condition: service_healthy
-        required: false
-      js-backend:
         condition: service_healthy
         required: false
     restart: unless-stopped
@@ -44,7 +41,7 @@ services:
       - PORT=8082
       - RUST_LOG=info
     healthcheck:
-      test: ["/rust-chess", "--health-check"]
+      test: ["CMD", "/rust-chess", "--health-check"]
       interval: 15s
       timeout: 3s
       start_period: 5s
@@ -57,7 +54,7 @@ services:
       context: ../go-chess
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8083:8080"
     environment:
       - CHESS_HOST=0.0.0.0
       - CHESS_PORT=8080
@@ -69,19 +66,5 @@ services:
       retries: 3
     restart: unless-stopped
 
-  # ── JS Backend (npm-chess) ─────────────────────────────
-  js-backend:
-    build:
-      context: ../npm-chess
-      dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
-    environment:
-      - PORT=8081
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/api/v1/health"]
-      interval: 15s
-      timeout: 3s
-      start_period: 5s
-      retries: 3
-    restart: unless-stopped
+  # NOTE: js-backend (npm-chess) is a library, not a server —
+  # no Dockerfile available.  Run it separately if needed.
